# django-k8s-pycon2024

./: README.md
.github/workflows/: main.yaml
applications/analytics_application/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
applications/analytics_application/analytics_application/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
applications/analytics_application/hello/: urls.py  views.py
applications/analytics_application/monitor/: test_view.py  urls.py  views.py
applications/core_application/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  wait-for-it.sh
applications/core_application/api/: v1.py
applications/core_application/core_application/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
applications/core_application/general/: mixins.py  paginations.py
applications/core_application/hello/: tasks.py  urls.py  views.py
applications/core_application/monitor/: test_view.py
infra/kubernetes/: eks-managed-nodes.yaml
infra/kubernetes/chart/: Chart.yaml  values.yaml
infra/kubernetes/chart/templates/: deployment-celery-beat.yaml  deployment-celery.yaml  deployment-django-analytics.yaml  deployment-django-core.yaml  hpa-analytics.yaml  hpa-core.yaml  ingress.yaml  issuer.yaml  post-upgrade-migrations.yaml  secrets.yaml  service-django-analytics.yaml  service-django-core.yaml
infra/terraform/envs/dev/: main.tf  outputs.tf
infra/terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/network-persistence/: main.tf  outputs.tf  variables.tf
(+1 files in other folders)
